# ls2k0300-hal

./: .gitignore  .gitmodules  README.md
Drivers/LS2K03xx_HAL_Driver/: LICENSE
Drivers/LS2K03xx_HAL_Driver/Inc/: ls2k03xx_hal.h  ls2k03xx_hal_adc.h  ls2k03xx_hal_adc_ex.h  ls2k03xx_hal_conf_template.h  ls2k03xx_hal_def.h  ls2k03xx_hal_dma.h  ls2k03xx_hal_dma_ex.h  ls2k03xx_hal_gpio.h  ls2k03xx_hal_i2c.h  ls2k03xx_hal_liointc.h  ls2k03xx_hal_spi_flash.h  ls2k03xx_hal_spi_io.h  ls2k03xx_hal_tim.h  ls2k03xx_hal_tim_ex.h  ls2k03xx_hal_uart.h
Drivers/LS2K03xx_HAL_Driver/Src/: ls2k03xx_hal.c  ls2k03xx_hal_adc.c  ls2k03xx_hal_adc_ex.c  ls2k03xx_hal_dma.c  ls2k03xx_hal_gpio.c  ls2k03xx_hal_i2c.c  ls2k03xx_hal_liointc.c  ls2k03xx_hal_spi_flash.c  ls2k03xx_hal_spi_io.c  ls2k03xx_hal_tim.c  ls2k03xx_hal_tim_ex.c  ls2k03xx_hal_uart.c
Drivers/LSSIS/Device/Loongson/LS2K03xx/Include/: ls2k0300.h  ls2k03xx.h  system_ls2k03xx.h
Drivers/LSSIS/Device/Loongson/LS2K03xx/Include/asm/: addrspace.h  asm-offsets.h  loongarch.h  regdef.h  stackframe.h
Drivers/LSSIS/Device/Loongson/LS2K03xx/Source/Templates/: system_ls2k03xx.c
Drivers/LSSIS/Device/Loongson/LS2K03xx/Source/Templates/gcc/: clksetting_2k0300.S  exception_ls2k0300.S  lowlevel_init_ls2k0300.S  startup_ls2k0300.S
Drivers/LSSIS/Device/Loongson/LS2K03xx/Source/Templates/gcc/linker/: LS2K0300.ld
Drivers/LSSIS/Include/: core_la264.h  lssis.h
Projects/ATK-DL2K0300B/Examples/ADC/Core/Inc/: ls2k03xx_hal_conf.h  ls2k03xx_it.h
Projects/ATK-DL2K0300B/Examples/ADC/Core/Src/: ls2k03xx_hal_msp.c  ls2k03xx_it.c  main.c
Projects/ATK-DL2K0300B/Examples/ADC/cmake/: CMakeLists.txt
Projects/CTCI_FOREVER_PI/Examples/GPIO/: CMakeLists.txt  CMakePresets.json
Projects/CTCI_FOREVER_PI/Examples/GPIO/Core/Inc/: ls2k03xx_hal_conf.h  main.h
Projects/CTCI_FOREVER_PI/Examples/GPIO/Core/Src/: main.c
Projects/CTCI_FOREVER_PI/Examples/GPIO/cmake/: CMakeLists.txt  loongarch64-unknown-elf.cmake
Projects/CTCI_FOREVER_PI/Examples/TIM/Core/Inc/: ls2k03xx_hal_conf.h  main.h
Projects/CTCI_FOREVER_PI/Examples/TIM/Core/Src/: main.c
Projects/CTCI_FOREVER_PI/Examples/TIM/cmake/: CMakeLists.txt
Projects/CTCI_FOREVER_PI/Examples/TIM_IT/: CMakePresets.json
Projects/CTCI_FOREVER_PI/Examples/TIM_IT/Core/Inc/: ls2k03xx_hal_conf.h  ls2k03xx_it.h
Projects/CTCI_FOREVER_PI/Examples/TIM_IT/Core/Src/: ls2k03xx_hal_msp.c  ls2k03xx_it.c  main.c
Projects/CTCI_FOREVER_PI/Examples/TIM_IT/cmake/: CMakeLists.txt  loongarch64-unknown-elf.cmake
Projects/CTCI_FOREVER_PI/Examples/UART/: CMakeLists.txt
Projects/CTCI_FOREVER_PI/Examples/UART/Core/Inc/: ls2k03xx_hal_conf.h  main.h
Projects/CTCI_FOREVER_PI/Examples/UART/Core/Src/: ls2k03xx_hal_msp.c  main.c
Projects/CTCI_FOREVER_PI/Examples/UART/cmake/: CMakeLists.txt
